test/scc/pp/errors/016.a
016.t:2:3: error: stray '#' in program